Base totals fix
Fixed order totals for base currency
Changed success and failure redirect points

--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -21,3 +21,5 @@
 "Expiration date","Data wygaśnięcia"
 "Processing data, please wait...","Procesowanie płatności, proszę czekać"
 "Name","Nazwisko"
+"There was an error during your payment.","Wystąpił błąd podczas Twojej płatności."
+"Thank you for your payment!","Dziękujemy za dokonanie płatności!"
