--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -23,3 +23,12 @@
 "Name","Nazwisko"
 "There was an error during your payment.","Wystąpił błąd podczas Twojej płatności."
 "Thank you for your payment!","Dziękujemy za dokonanie płatności!"
+"Card data correct! You can now place order.","Dane karty są poprawne! Możesz teraz złożyć zamówienie."
+"Incorrect card data!","Niepoprawne dane karty!"
+"CVC","CVC"
+"For MasterCard, Visa or Discover, these are the last three digits placed next to the card's user signature.","Dla MasterCard, Visa lub Discover, są to trzy ostatnie cyfry umieszczone przy podpisie karty."
+"E-mail","E-mail"
+"email@example.com","email@domena.pl"
+"Processing data,","Procesowanie danych"
+"please","proszę"
+"wait...","czekać..."
