Payment logic optimisation
Optimised data provided by customer
Added invalid card data highlighting
Fixed language translation

--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -26,9 +26,7 @@
 "Card data correct! You can now place order.","Dane karty są poprawne! Możesz teraz złożyć zamówienie."
 "Incorrect card data!","Niepoprawne dane karty!"
 "CVC","CVC"
-"For MasterCard, Visa or Discover, these are the last three digits placed next to the card's user signature.","Dla MasterCard, Visa lub Discover, są to trzy ostatnie cyfry umieszczone przy podpisie karty."
+"For MasterCard, Visa or Discover, these are the last three digits placed next to the cards user signature.","Dla MasterCard, Visa lub Discover, są to trzy ostatnie cyfry umieszczone przy podpisie karty."
 "E-mail","E-mail"
 "email@example.com","email@domena.pl"
-"Processing data,","Procesowanie danych"
-"please","proszę"
-"wait...","czekać..."
+"Processing data, please wait...","Procesowanie danych, proszę czekać..."
