Supported credit card types update
Set current supported credit card types to visa and mastercard only

--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -30,3 +30,5 @@
 "E-mail","E-mail"
 "email@example.com","email@domena.pl"
 "Processing data, please wait...","Procesowanie danych, proszę czekać..."
+"Sorry, your credit card type is currently not supported. Please try another payment method.","Przepraszamy, Twój typ karty kredytowej nie jest obecnie obsługiwany. Prosimy wybrać inną metodę płatności."
+"Your credit card number seems to be invalid.","Wprowadzone dane karty wydają się niepoprawne."
