--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -26,9 +26,13 @@
 "Card data correct! You can now place order.","Dane karty są poprawne! Możesz teraz złożyć zamówienie."
 "Incorrect card data!","Niepoprawne dane karty!"
 "CVC","CVC"
-"For MasterCard, Visa or Discover, these are the last three digits placed next to the cards user signature.","Dla MasterCard, Visa lub Discover, są to trzy ostatnie cyfry umieszczone przy podpisie karty."
+"For MasterCard, Visa or Discover, these are the last three digits placed next to the card user signature.","Dla MasterCard, Visa lub Discover, są to trzy ostatnie cyfry umieszczone przy podpisie karty."
 "E-mail","E-mail"
 "email@example.com","email@domena.pl"
 "Processing data, please wait...","Procesowanie danych, proszę czekać..."
 "Sorry, your credit card type is currently not supported. Please try another payment method.","Przepraszamy, Twój typ karty kredytowej nie jest obecnie obsługiwany. Prosimy wybrać inną metodę płatności."
 "Your credit card number seems to be invalid.","Wprowadzone dane karty wydają się niepoprawne."
+"Save my card","Zapisz moją kartę"
+"Allow to pay faster for next orders. Card data will be stored on secure tpay.com server.","Zezwolenie na szybszą płatność za kolejne zamówienia. Dane karty zostaną zapisane na bezpiecznym serwerze tpay.com."
+"Pay with saved card ","Zapłać zapisaną kartą "
+"Pay with a new card","Zapłać nową kartą"
