--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -15,7 +15,7 @@
 "Minimal amount for method","Dostępność od minimalnej kwoty zamówienia"
 "Maximal amount for method","Dostępność do maksymalnej kwoty zamówienia"
 "Leave empty for no limit","Pozostaw puste, jeśli nie ma limitu"
-"Choose payment method","Wybierz jeden ze sposobów płatnośći"
+"Choose a payment method","Wybierz jeden ze sposobów płatnośći"
 "I accept the regulations of tpay.com.","Akceptuje regulamin tpay.com."
 "Card number","Numer karty"
 "Expiration date","Data wygaśnięcia"
