--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -1,5 +1,5 @@
-"In order to complete the payment you will be redirected to tpay.com. Click button below if you were not redirected automatically","W celu dokończenia płatności zostaniesz przekierowany do tpay.com. Wybierz przycisk jeśli przekierowanie nie nastąpiło automatycznie"
-"Redirect me to tpay.com.","Przekierowanie do tpay.com."
+"In order to complete the payment you will be redirected to Tpay. Click button below if you were not redirected automatically","W celu dokończenia płatności zostaniesz przekierowany do Tpay. Wybierz przycisk jeśli przekierowanie nie nastąpiło automatycznie"
+"Redirect me to Tpay.","Przekierowanie do Tpay."
 "Active","Aktywny"
 "Description","Opis"
 "Merchant ID","ID Sprzedawcy"
@@ -15,8 +15,8 @@
 "Minimal amount for method","Dostępność od minimalnej kwoty zamówienia"
 "Maximal amount for method","Dostępność do maksymalnej kwoty zamówienia"
 "Leave empty for no limit","Pozostaw puste, jeśli nie ma limitu"
-"Choose a payment method","Wybierz jeden ze sposobów płatnośći"
-"I accept the regulations of tpay.com.","Akceptuje regulamin tpay.com."
+"Choose a payment method","Wybierz jeden ze sposobów płatności"
+"I accept the regulations of Tpay.","Akceptuje regulamin Tpay."
 "Card number","Numer karty"
 "Expiration date","Data wygaśnięcia"
 "Processing data, please wait...","Procesowanie płatności, proszę czekać"
@@ -33,6 +33,6 @@
 "Sorry, your credit card type is currently not supported. Please try another payment method.","Przepraszamy, Twój typ karty kredytowej nie jest obecnie obsługiwany. Prosimy wybrać inną metodę płatności."
 "Your credit card number seems to be invalid.","Wprowadzone dane karty wydają się niepoprawne."
 "Save my card","Zapisz moją kartę"
-"Allow to pay faster for next orders. Card data will be stored on secure tpay.com server.","Zezwolenie na szybszą płatność za kolejne zamówienia. Dane karty zostaną zapisane na bezpiecznym serwerze tpay.com."
+"Allow to pay faster for next orders. Card data will be stored on secure Tpay server.","Zezwolenie na szybszą płatność za kolejne zamówienia. Dane karty zostaną zapisane na bezpiecznym serwerze Tpay."
 "Pay with saved card ","Zapłać zapisaną kartą "
 "Pay with a new card","Zapłać nową kartą"
